Add hue adjustment, background rendering pipeline, and live preview to the editor.
Introduce a RenderService that runs the image pipeline on a background single-thread executor and cancels stale renders so older previews cannot overwrite a newer result. Drive rendering from EditorController through a throttled preview timeline while sliders are being dragged and a delayed full-size render that fires after slider interaction stops, using a downscaled PreviewImage for the interactive phase. Add a Hue slider, precompute its values through AdjustmentLut as a 360-entry degree-indexed table, and apply it in ImageProcessor.applyAdjustments. Widen the contrast slider range to -1..1 and increase the editor image view width from 600 to 800. Switch HsvColor.clamp to Math.clamp. Refresh Javadoc and the README to cover hue, the LUT structure, the render service, and the preview pipeline.